RESOLVED FIXED157143
DebuggerScope::className() should not assert scope->isValid().
https://bugs.webkit.org/show_bug.cgi?id=157143
Summary DebuggerScope::className() should not assert scope->isValid().
Mark Lam
Reported 2016-04-28 11:05:08 PDT
DebuggerScope::className() should not assert scope->isValid() because the TypeProfiler logs objects it encounters, and may indirectly call JSObject::calculatedClassName() on those objects later, thereby calling DebuggerScope::className() on an invalidated DebuggerScope. The existing handling in DebuggerScope::className() for an invalidated scope (that returns a null string) is sufficient.
Attachments
proposed patch. (1.86 KB, patch)
2016-04-28 11:12 PDT, Mark Lam
keith_miller: review+
Mark Lam
Comment 1 2016-04-28 11:10:32 PDT
Mark Lam
Comment 2 2016-04-28 11:12:26 PDT
Created attachment 277634 [details] proposed patch.
Keith Miller
Comment 3 2016-04-28 11:15:40 PDT
Comment on attachment 277634 [details] proposed patch. r=me
Mark Lam
Comment 4 2016-04-28 11:19:04 PDT
Thanks for the review. Landed in r200200: <http://trac.webkit.org/r200200>.
Mark Lam
Comment 5 2016-04-28 11:30:24 PDT
Correction: this bug is not <rdar://problem/20790971>. There was a mis-aggregation.
Radar WebKit Bug Importer
Comment 6 2016-04-28 11:33:42 PDT
Radar WebKit Bug Importer
Comment 7 2016-04-28 11:34:40 PDT
Note You need to log in before you can comment on or make changes to this bug.