DebuggerScope::className() should not assert scope->isValid(). https://bugs.webkit.org/show_bug.cgi?id=157143

Reviewed by Keith Miller.

DebuggerScope::className() should not assert scope->isValid() because the
TypeProfiler logs objects it encounters, and may indirectly call
JSObject::calculatedClassName() on those objects later, thereby calling
DebuggerScope::className() on an invalidated DebuggerScope.

The existing handling in DebuggerScope::className() for an invalidated scope
(that returns a null string) is sufficient.

* debugger/DebuggerScope.cpp:
(JSC::DebuggerScope::className):



Canonical link: https://commits.webkit.org/175247@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200200 268f45cc-cd09-0410-ab3c-d52691b4dbfc